# scisynth

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  chainlit.md  pyproject.toml
.github/workflows/: ci.yml
brain_artifacts/: scisynth_architecture.md.metadata.json  scisynth_usage_guide.md.metadata.json
docs/: project_architecture_and_workflow.md  scisynth_architecture.md
docs/brain_artifacts/: scisynth_usage_guide.md.resolved.0
eval/questions/: frozen_questions.jsonl
src/scisynth/: cli.py  config.py
src/scisynth/agent/: __init__.py  llm_client.py  models.py  multihop.py  prompting.py  service.py
src/scisynth/api/: __init__.py  main.py
src/scisynth/eval/: __init__.py  runner.py
src/scisynth/ingestion/: __init__.py  arxiv_cache.py  arxiv_discovery.py  arxiv_loader.py  arxiv_single.py  hf_loader.py  loader.py  pdf_extract.py  pipeline.py  raw_snapshot.py  schema.py  transform.py  writer.py
src/scisynth/ingestion/fixtures/v1/: metadata.jsonl  paper_qasper_demo.md  paper_scifact_demo.md
src/scisynth/research/: __init__.py  graph.py  models.py  prompts.py  state.py
src/scisynth/research/nodes/: __init__.py  planner.py  researcher.py  reviewer.py  synthesizer.py  writer.py
src/scisynth/retrieval/: __init__.py  chunks_io.py  contract.py  documents_io.py  factory.py  live.py  memory_bm25.py  memory_semantic.py  mock.py  ranking.py  text.py
src/scisynth/ui/: __init__.py  chainlit_app.py  gradio_app.py
tests/: test_arxiv_single.py  test_ingestion_pipeline.py  test_live_retriever.py  test_multihop_rag.py  test_phase4_agent_api.py
