[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scisynth"
version = "0.1.0"
description = "Science synthesis RAG stack (ingestion + BM25 retrieval)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "arxiv>=2.1",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "datasets>=3.0",
]
hf = [
    "datasets>=3.0",
]

[project.scripts]
scisynth = "scisynth.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
