[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scisynth"
version = "0.1.0"
description = "Science synthesis RAG stack (ingestion + BM25 retrieval)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "arxiv>=2.1",
    "rank-bm25>=0.2.2",
    "httpx>=0.27",
    "numpy>=1.26",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "datasets>=3.0",
]
hf = [
    "datasets>=3.0",
]
semantic = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
]
ui = [
    "gradio>=5.0",
]

[project.scripts]
scisynth = "scisynth.cli:main"
scisynth-ui = "scisynth.ui.gradio_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
